<resources>
    <string name="app_name">Твоя помощь</string>
    <string name="agreement">Условия соглашения.</string>
    <string name="login_put_data">Введите личные данные по желанию</string>
    <string name="home_advertising">Иформация.</string>
    <string name="acceptTransfer">Подтвердите перевод</string>
    <string name="shareLink">Поделиться сылкой</string>
    <string name="checkInternet">Проверьте интернет</string>
    <string name="youTransferMoney">Вы хотите отправить на помощь Тестову Т.Т</string>
    <string name="thankYouForTransfer">Спасибо! Вы можете спасти жизнь человека.</string>
    <string name="fundRequisites">Реквизиты фонда</string>
    <string name="youTransfered">Вы отправили </string>
    <string name="userHelpInfo">Вами было переведено на счет фонда 100 сом за все время.</string>
    <string name="userHelpsFollowings">Вы помогли следующим людям:</string>
    <string name="humanAge">30 лет</string>
    <string name="humanStatus">Женат, двое детей.</string>
    <string name="humanAddress">г. Тест</string>
    <string name="humanDesc">Тестов Т. работает учителем математики в средней школе № 1.
        Воспитал нескольких олимпиадников которые нераз занимали первые места в республиканских
        и международных олимпиадах. Работает над решением Гипотезы Римана которая
        является одной из не решенных задач в математике и была внесена в список \"Задачи тысячелетия\".</string>

    <string name="fundRequisitesText">Реквизиты фонда:\nСчет в Оптима Банк: 1115122532152 сом
    \n1115122532153 дол\n1115122532154 руб\n1115122532155 евро
    \nАдрес: пр.Мира 254\nТел: +996 312 123 456\nСайт: jardam.kg</string>

    <string name="setSumOfTrans">Установите сумму перевода по умолчанию:</string>

    <string-array name="notify_me_values">
        <item>Каждый день</item>
        <item>Раз в три дня</item>
        <item>Раз в неделю</item>
    </string-array>

    <string name="login">Логин</string>
    <string name="name">Имя</string>
    <string name="secName">Фамилия</string>
    <string name="thName">Отчество</string>
    <string name="fioIfWant">ФИО по желанию</string>
    <string name="som">СОМ</string>

    <string name="acceptLicense">Принять</string>
    <string name="skip">Пропустить</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="ok">OK</string>
    <string name="transferMoney">Перевести деньги</string>
    <string name="share">Поделиться</string>
    <string name="privateOffice">Личный кабинет</string>
    <string name="settings">Настройки</string>

    <string name="agreementsTerms">Условия соглашения</string>
    <string name="fio">ФИО:</string>
    <string name="test_fio">Тестов Т.Т.</string>
    <string name="notify_me">Уведомлять меня о переводе:</string>
    <string name="no_internet">Не возможно обновить данные. Проверьте интернет подключение.</string>

    <string name="anyError">Произошла ошибка.\nПроверьте интернет соединение</string>
</resources>
