<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="android.jardam.kg.ActivitySettings">


    <include layout="@layout/layout_human"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textSetSumOfTrans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/setSumOfTrans"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp" />

        <EditText
            android:id="@+id/editDefValue"
            android:layout_width="104dp"
            android:layout_height="42dp"
            android:inputType="number"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textSetSumOfTrans"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/textSettCurr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/som"
            app:layout_constraintBottom_toBottomOf="@+id/editDefValue"
            app:layout_constraintLeft_toRightOf="@+id/editDefValue"
            android:layout_marginStart="8dp" />

        <Button
            android:id="@+id/buttonSaveSettings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/save"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editDefValue" />

    </android.support.constraint.ConstraintLayout>

    <WebView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
